Trabalho2/gci/.antlr/gramaticaParser.java
// Generated from /data/UFSC/COMPILA/Compiladores/Trabalho2/gci/gramatica.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, INT=2, STRING=3, FLOAT=4, BREAK=5, ATRIBUICAO=6, PRINT=7, CHAVEA=8, 
		CHAVEF=9, COLCHA=10, COLCHF=11, READ=12, RETURN=13, PARENTEA=14, PARENTEF=15, 
		IF=16, ELSE=17, FOR=18, NULL=19, NEW=20, VIRGULA=21, PONTOEVIRGULA=22, 
		MENORQUE=23, MAIORQUE=24, MENOREIGUAL=25, MAIOREIGUAL=26, IGUAL=27, DIFERENTE=28, 
		MAIS=29, MENOS=30, MULTIPLICACAO=31, DIVISAO=32, MODULO=33, IDENT=34, 
		INT_CONSTANT=35, FLOAT_CONSTANT=36, STRING_CONSTANT=37, WS=38;
	public static final int
		RULE_program = 0, RULE_funclist = 1, RULE_funcdef = 2, RULE_a = 3, RULE_paramlist = 4, 
		RULE_statement = 5, RULE_b = 6, RULE_vardecl = 7, RULE_c = 8, RULE_atribstat = 9, 
		RULE_funccall = 10, RULE_paramlistcall = 11, RULE_printstat = 12, RULE_readstat = 13, 
		RULE_returnstat = 14, RULE_ifstat = 15, RULE_statement2 = 16, RULE_forstat = 17, 
		RULE_atribstat2 = 18, RULE_statelist = 19, RULE_d = 20, RULE_allocexpression = 21, 
		RULE_comparadores = 22, RULE_expression = 23, RULE_numexpression2 = 24, 
		RULE_maisoumenos = 25, RULE_e = 26, RULE_numexpression = 27, RULE_mdm = 28, 
		RULE_f = 29, RULE_term = 30, RULE_unaryexpr = 31, RULE_factor = 32, RULE_g = 33, 
		RULE_lvalue = 34;
	public static final String[] ruleNames = {
		"program", "funclist", "funcdef", "a", "paramlist", "statement", "b", 
		"vardecl", "c", "atribstat", "funccall", "paramlistcall", "printstat", 
		"readstat", "returnstat", "ifstat", "statement2", "forstat", "atribstat2", 
		"statelist", "d", "allocexpression", "comparadores", "expression", "numexpression2", 
		"maisoumenos", "e", "numexpression", "mdm", "f", "term", "unaryexpr", 
		"factor", "g", "lvalue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'def'", "'int'", "'string'", "'float'", "'break'", "'='", "'print'", 
		"'{'", "'}'", "'['", "']'", "'read'", "'return'", "'('", "')'", "'if'", 
		"'else'", "'for'", "'null'", "'new'", "','", "';'", "'<'", "'>'", "'<='", 
		"'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DEF", "INT", "STRING", "FLOAT", "BREAK", "ATRIBUICAO", "PRINT", 
		"CHAVEA", "CHAVEF", "COLCHA", "COLCHF", "READ", "RETURN", "PARENTEA", 
		"PARENTEF", "IF", "ELSE", "FOR", "NULL", "NEW", "VIRGULA", "PONTOEVIRGULA", 
		"MENORQUE", "MAIORQUE", "MENOREIGUAL", "MAIOREIGUAL", "IGUAL", "DIFERENTE", 
		"MAIS", "MENOS", "MULTIPLICACAO", "DIVISAO", "MODULO", "IDENT", "INT_CONSTANT", 
		"FLOAT_CONSTANT", "STRING_CONSTANT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public  code;
		public  next;
		public StatementContext statement;
		public FunclistContext funclist;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case STRING:
			case FLOAT:
			case BREAK:
			case PRINT:
			case CHAVEA:
			case READ:
			case RETURN:
			case IF:
			case FOR:
			case PONTOEVIRGULA:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				_localctx.next = Label()
				setState(71);
				((ProgramContext)_localctx).statement = statement(_localctx.next);
				_localctx.code = ((ProgramContext)_localctx).statement.code + getLabel(_localctx.next)
				print(getCode(_localctx.code))
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 2);
				{
				_localctx.next = Label()
				setState(76);
				((ProgramContext)_localctx).funclist = funclist(_localctx.next);
				_localctx.code = ((ProgramContext)_localctx).funclist.code
				print(getCode(_localctx.code))
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 3);
				{
				_localctx.code = " "
				print(getCode(_localctx.code))
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunclistContext extends ParserRuleContext {
		public  next;
		public  code;
		public  begin;
		public FuncdefContext funcdef;
		public FunclistContext funclist;
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public FunclistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public FunclistContext(ParserRuleContext parent, int invokingState,  next) {
			super(parent, invokingState);
			this.next = next;
		}
		@Override public int getRuleIndex() { return RULE_funclist; }
	}

	public final FunclistContext funclist( next) throws RecognitionException {
		FunclistContext _localctx = new FunclistContext(_ctx, getState(), next);
		enterRule(_localctx, 2, RULE_funclist);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				_localctx.begin = Label()
				setState(85);
				((FunclistContext)_localctx).funcdef = funcdef(_localctx.begin);
				setState(86);
				((FunclistContext)_localctx).funclist = funclist(_localctx.next);
				_localctx.code = ((FunclistContext)_localctx).funcdef.code + getLabel(_localctx.begin) + ((FunclistContext)_localctx).funclist.code
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				_localctx.begin = Label()
				setState(90);
				((FunclistContext)_localctx).funcdef = funcdef(_localctx.next);
				_localctx.code = ((FunclistContext)_localctx).funcdef.code
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public  next;
		public  code;
		public Token IDENT;
		public StatelistContext statelist;
		public TerminalNode DEF() { return getToken(gramaticaParser.DEF, 0); }
		public TerminalNode IDENT() { return getToken(gramaticaParser.IDENT, 0); }
		public TerminalNode PARENTEA() { return getToken(gramaticaParser.PARENTEA, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode PARENTEF() { return getToken(gramaticaParser.PARENTEF, 0); }
		public TerminalNode CHAVEA() { return getToken(gramaticaParser.CHAVEA, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode CHAVEF() { return getToken(gramaticaParser.CHAVEF, 0); }
		public FuncdefContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public FuncdefContext(ParserRuleContext parent, int invokingState,  next) {
			super(parent, invokingState);
			this.next = next;
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
	}

	public final FuncdefContext funcdef( next) throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState(), next);
		enterRule(_localctx, 4, RULE_funcdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(DEF);
			setState(96);
			((FuncdefContext)_localctx).IDENT = match(IDENT);
			setState(97);
			match(PARENTEA);
			setState(98);
			paramlist();
			setState(99);
			match(PARENTEF);
			setState(100);
			match(CHAVEA);
			setState(101);
			((FuncdefContext)_localctx).statelist = statelist(_localctx.next);
			setState(102);
			match(CHAVEF);
			_localctx.code = LabelFunc((((FuncdefContext)_localctx).IDENT!=null?((FuncdefContext)_localctx).IDENT.getText():null)) + ((FuncdefContext)_localctx).statelist.code
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AContext extends ParserRuleContext {
		public  value;
		public Token INT;
		public Token FLOAT;
		public Token STRING;
		public TerminalNode INT() { return getToken(gramaticaParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(gramaticaParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(gramaticaParser.STRING, 0); }
		public AContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a; }
	}

	public final AContext a() throws RecognitionException {
		AContext _localctx = new AContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_a);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				((AContext)_localctx).INT = match(INT);
				_localctx.value = (((AContext)_localctx).INT!=null?((AContext)_localctx).INT.getText():null)
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				((AContext)_localctx).FLOAT = match(FLOAT);
				_localctx.value = (((AContext)_localctx).FLOAT!=null?((AContext)_localctx).FLOAT.getText():null)
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				((AContext)_localctx).STRING = match(STRING);
				_localctx.value = (((AContext)_localctx).STRING!=null?((AContext)_localctx).STRING.getText():null)
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistContext extends ParserRuleContext {
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(gramaticaParser.IDENT, 0); }
		public TerminalNode VIRGULA() { return getToken(gramaticaParser.VIRGULA, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public ParamlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist; }
	}

	public final ParamlistContext paramlist() throws RecognitionException {
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_paramlist);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				a();
				setState(114);
				match(IDENT);
				setState(115);
				match(VIRGULA);
				setState(116);
				paramlist();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				a();
				setState(119);
				match(IDENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public  next;
		public  code;
		public VardeclContext vardecl;
		public AtribstatContext atribstat;
		public PrintstatContext printstat;
		public ReadstatContext readstat;
		public ReturnstatContext returnstat;
		public IfstatContext ifstat;
		public ForstatContext forstat;
		public StatelistContext statelist;
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public TerminalNode PONTOEVIRGULA() { return getToken(gramaticaParser.PONTOEVIRGULA, 0); }
		public AtribstatContext atribstat() {
			return getRuleContext(AtribstatContext.class,0);
		}
		public PrintstatContext printstat() {
			return getRuleContext(PrintstatContext.class,0);
		}
		public ReadstatContext readstat() {
			return getRuleContext(ReadstatContext.class,0);
		}
		public ReturnstatContext returnstat() {
			return getRuleContext(ReturnstatContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public ForstatContext forstat() {
			return getRuleContext(ForstatContext.class,0);
		}
		public TerminalNode CHAVEA() { return getToken(gramaticaParser.CHAVEA, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode CHAVEF() { return getToken(gramaticaParser.CHAVEF, 0); }
		public TerminalNode BREAK() { return getToken(gramaticaParser.BREAK, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementContext(ParserRuleContext parent, int invokingState,  next) {
			super(parent, invokingState);
			this.next = next;
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement( next) throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState(), next);
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case STRING:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				((StatementContext)_localctx).vardecl = vardecl();
				setState(124);
				match(PONTOEVIRGULA);
				_localctx.code = ((StatementContext)_localctx).vardecl.code
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				((StatementContext)_localctx).atribstat = atribstat();
				setState(128);
				match(PONTOEVIRGULA);
				_localctx.code = ((StatementContext)_localctx).atribstat.code
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				((StatementContext)_localctx).printstat = printstat();
				setState(132);
				match(PONTOEVIRGULA);
				_localctx.code = ((StatementContext)_localctx).printstat.code
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				((StatementContext)_localctx).readstat = readstat();
				setState(136);
				match(PONTOEVIRGULA);
				_localctx.code = ((StatementContext)_localctx).readstat.code
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 5);
				{
				setState(139);
				((StatementContext)_localctx).returnstat = returnstat();
				setState(140);
				match(PONTOEVIRGULA);
				_localctx.code = ((StatementContext)_localctx).returnstat.code
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 6);
				{
				setState(143);
				((StatementContext)_localctx).ifstat = ifstat(_localctx.next);
				_localctx.code = ((StatementContext)_localctx).ifstat.code
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 7);
				{
				setState(146);
				((StatementContext)_localctx).forstat = forstat(_localctx.next);
				_localctx.code = ((StatementContext)_localctx).forstat.code
				}
				break;
			case CHAVEA:
				enterOuterAlt(_localctx, 8);
				{
				setState(149);
				match(CHAVEA);
				setState(150);
				((StatementContext)_localctx).statelist = statelist(_localctx.next);
				setState(151);
				match(CHAVEF);
				_localctx.code = ((StatementContext)_localctx).statelist.code
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 9);
				{
				setState(154);
				match(BREAK);
				setState(155);
				match(PONTOEVIRGULA);
				_localctx.code = "goto " + _localctx.next + getNewLine()
				}
				break;
			case PONTOEVIRGULA:
				enterOuterAlt(_localctx, 10);
				{
				setState(157);
				match(PONTOEVIRGULA);
				_localctx.code = getNewLine()
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BContext extends ParserRuleContext {
		public TerminalNode COLCHA() { return getToken(gramaticaParser.COLCHA, 0); }
		public TerminalNode INT_CONSTANT() { return getToken(gramaticaParser.INT_CONSTANT, 0); }
		public TerminalNode COLCHF() { return getToken(gramaticaParser.COLCHF, 0); }
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public BContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b; }
	}

	public final BContext b() throws RecognitionException {
		BContext _localctx = new BContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_b);
		try {
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COLCHA:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(COLCHA);
				setState(162);
				match(INT_CONSTANT);
				setState(163);
				match(COLCHF);
				setState(164);
				b();
				}
				break;
			case PONTOEVIRGULA:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public  code;
		public AContext a;
		public Token IDENT;
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(gramaticaParser.IDENT, 0); }
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			((VardeclContext)_localctx).a = a();
			setState(169);
			((VardeclContext)_localctx).IDENT = match(IDENT);
			setState(170);
			b();
			_localctx.code = ((VardeclContext)_localctx).a.value + " " + (((VardeclContext)_localctx).IDENT!=null?((VardeclContext)_localctx).IDENT.getText():null) + getNewLine()
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CContext extends ParserRuleContext {
		public  code;
		public  result;
		public ExpressionContext expression;
		public AllocexpressionContext allocexpression;
		public FunccallContext funccall;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AllocexpressionContext allocexpression() {
			return getRuleContext(AllocexpressionContext.class,0);
		}
		public FunccallContext funccall() {
			return getRuleContext(FunccallContext.class,0);
		}
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
	}

	public final CContext c() throws RecognitionException {
		CContext _localctx = new CContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_c);
		try {
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(173);
				((CContext)_localctx).expression = expression();
				_localctx.code = ((CContext)_localctx).expression.code
				_localctx.result = ((CContext)_localctx).expression.result
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(177);
				((CContext)_localctx).allocexpression = allocexpression();
				_localctx.code = ((CContext)_localctx).allocexpression.code
				_localctx.result = ((CContext)_localctx).allocexpression.result
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(181);
				((CContext)_localctx).funccall = funccall();
				_localctx.code = ((CContext)_localctx).funccall.code
				_localctx.result = ((CContext)_localctx).funccall.result
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribstatContext extends ParserRuleContext {
		public  code;
		public LvalueContext lvalue;
		public CContext c;
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public TerminalNode ATRIBUICAO() { return getToken(gramaticaParser.ATRIBUICAO, 0); }
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public AtribstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribstat; }
	}
